# fdd_pipeline_new

./: .dockerignore  .env.example  .env.template  .gitignore  .mcp.json  .mcp_WIN.json  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_SUMMARY.md  CURRENT_STRUCTURE.md  Current_Summary.md  Dockerfile  FDD_SECTION_IDENTIFICATION_PLAN.md  FINAL_REFACTORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPORT_UPDATES_NEEDED.md  MIGRATION_STATUS.md  Makefile  PHASE_4_TEST_CONSOLIDATION_REPORT.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  REFACTORING_REPORT.md  REFACTORING_REPORT_FINAL.md  REFACTORING_TODO.md  all_mcp_servers_combined.json  baseline_metrics_report.md  config.py  debug_detector.py  debug_enhanced_detector.py  debug_item5_phased.py  debug_pagination.py  debug_sequential.py  dependencies_inventory.md  docker-compose.yml  file_structure_documentation.md  filemapmarkdown.py  franchise_scrapers_implementation_plan.md  franchise_scrapers_todo.md  instructor_claude_file.md  (+22 more)
.claude/: settings.local.json
archive/: identify_fdd_sections.py
config/: mineru_config.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_REFERENCE.md  FINAL_REVIEW.md  MINERU_INTEGRATION.md  TECH_STACK.md  mineru_processing.md  system_overview.md  troubleshooting.md
docs_old/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md
examples/: database_operations_demo.py  instructor_usage.py
flows/: __init__.py  base_state_flow.py  complete_pipeline.py  identify_fdd_sections.py  process_single_pdf.py  scrape_minnesota.py  scrape_wisconsin.py  state_configs.py
franchise_scrapers/: MN_Scraper.py  MN_Scraper_DB.py  README.md  WI_Scraper.py  WI_Scraper_DB.py  WI_Scraper_fixes.md  __main__.py  browser.py  cli.py  config.py  database_integration.py  models.py  requirements.txt  scrape_model.py  test_database_integration.py  test_gdrive_auth.py  test_mn_scraper_gdrive.py  test_wi_scraper_gdrive.py
franchise_web_scraper/: MN_Scraper.py  WI_scraper.py  franchise_data.csv  franchise_scraper.py
migrations/: 003_operational_tables.sql  004_rls_policies_and_indexes.sql  005_drive_files_table.sql  006_vector_similarity_functions.sql  combined_all_migrations.sql
models/: MODEL_MIGRATION_GUIDE.md  __init__.py  base.py  base_items.py  composite.py  document_models.py  drive_files.py  fdd.py  franchisor.py  item19_fpr.py  item19_fpr_response.py  item20_outlets.py  item20_outlets_response.py  item21_financials.py  item21_financials_response.py  item5_fees.py  item5_fees_response.py  item6_other_fees.py  item6_other_fees_response.py  item7_investment.py  item7_investment_response.py  item_json.py  pipeline_log.py  scrape_metadata.py  section.py
prompts/: __init__.py  item19_fpr.yaml  item20_outlets.yaml  item21_financials.yaml  item5_fees.yaml  item6_other_fees.yaml  item7_investment.yaml
scrapers/: __init__.py
scripts/: README_SELENIUM_TEMPLATE.md  backup_database.py  check_config.py  deploy_minnesota_flow.py  deploy_state_flows.py  genson_schema_extractor.py  health_check.py  html_table_to_dataframe.py  monitoring.py  optimize_mineru.py  orchestrate_workflow.py  page_loading_demo.py  run_deduplication.py  run_flow.py  selenium_template_antibot.py  serve_flows.py  setup_gdrive_structure.py  validate_config.py  verify_minnesota_implementation.py  wisconsin_table_extractor.py
specs/: Web_Scraping_MN_WI_Specs.md
src/: __init__.py
storage/: authenticate_gdrive.py  google_drive.py  google_drive_oauth.py
tasks/: __init__.py  data_storage.py  document_metadata.py  document_processing.py  document_processing_integration.py  document_segmentation.py  drive_operations.py  exceptions.py  llm_extraction.py  mineru_processing.py  minnesota_scraper.py  schema_validation.py  web_scraping.py  wisconsin_scraper.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_database_integration.py  test_document_processing.py  test_document_processing_integration.py  test_document_segmentation.py  test_document_segmentation_integration.py  test_drive_operations.py  test_enhanced_detector.py  test_enhanced_fdd_section_detector.py  test_franchisor_extraction.py  test_instructor_integration.py  test_item20_pages.py  test_llm_extraction.py  test_minnesota_flow.py  test_minnesota_flow_integration.py  test_minnesota_flow_simple.py  test_models.py  test_prompt_loader.py  test_schema_validation.py  test_schema_validation_enhanced.py  test_state_flow_base.py  test_state_flows.py  test_validation_utils.py  test_web_scraping.py  test_wisconsin_flow.py  (+1 more)
(+131 files in other folders)
